♻️ Replace the path to the logos by react components from React-Tabler-Icon + Use ChatGPT to expand some content

--- a/docs/docs/commercial/client/client.mdx
+++ b/docs/docs/commercial/client/client.mdx
@@ -9,9 +9,9 @@ import DocCardList from "@theme/DocCardList";
 
 <CustomCard img={"/img/commercial/customer_focus.png"} />
 
-Une fiche client se décompose de **4 parties** :
+La **fiche client** est l'une des fonctionnalités clés du module **"Commercial"**. Elle permet de visualiser toutes les informations relatives à un client enregistré dans l'application. La fiche client se décompose en **4 parties** :
 
-- Les coordonnées de contact du client séléctionné,
+- Les coordonnées de contact du client sélectionné,
 - Les dernières informations en lien avec les relations commerciales :
   - Commercial référent,
   - Dernière visite,
@@ -20,5 +20,7 @@ Une fiche client se décompose de **4 parties** :
   - Statut de paiement,
   - Objectif de facturation,
 - Les comptes-rendus de visite / réunion
+
+Cette vue globale permet aux commerciaux de mieux connaître leur client et de suivre leur historique de relations commerciales de manière efficace.
 
 <DocCardList />
