--- a/docs/docs/commercial/client/contact.mdx
+++ b/docs/docs/commercial/client/contact.mdx
@@ -50,13 +50,13 @@ Il arrive que certains logos ne se chargent pas correctement. Ce problème sera 
 <CustomItem
   logoType={"pencil"}
   content={
-    "Le mode édition peut se lancer en cliquant sur <b>le crayon</b> en haut à droite de la carte."
+    "Le mode édition peut être lancé en cliquant sur <b>le crayon</b> en haut à droite de la carte."
   }
 />
 
 <CustomCard img={"/img/commercial/customer_identity_edit.png"} />
 
-Dans ce mode vous pouvez modifier :
+Dans ce mode, vous pouvez modifier les informations suivantes :
 
 - L'adresse,
 - Le code postal,
@@ -74,7 +74,7 @@ Renseigner un "-" si vous souhaitez laisser le numéro de téléphone ou l'adres
 
 Un commercial doit être assigné comme **"Commercial référent"** pour pouvoir éditer la carte.
 
-- Obligation de saisir 5 chiffres pour le code postale
+- Obligation de saisir 5 chiffres pour le code postal
 - Obligation de saisir un format d'adresse mail valide → exemple@domaine.fr
 - Obligation de saisir un format de numéro de téléphone valide :
   - 0000000000,
@@ -117,7 +117,7 @@ Plusieurs informations sont alors affichées :
 :::
 :::info
 
-Les interlocuteurs enregistrées seront disponibles pour la création de **["Nouveau rendez-vous"](/docs/commercial/client/visites-reunion#nouveau-rendez-vous)**
+Les interlocuteurs enregistrés seront disponibles pour la création de **["Nouveau rendez-vous"](/docs/commercial/client/visites-reunion#nouveau-rendez-vous)**
 
 :::
 
