--- a/docs/docs/commercial/client/facturation-comptabilite.mdx
+++ b/docs/docs/commercial/client/facturation-comptabilite.mdx
@@ -15,7 +15,7 @@ import CustomItem from "../../../src/components/utils/CustomItem.tsx";
 
 La carte **Facturation / Comptabilité** affiche plusieurs informations :
 
-- Le délai de paiement enregistrés pour le client :
+- Le délai de paiement enregistré pour le client :
   - 30 jours (fin de mois),
   - 30 jours (net),
   - 45 jours
@@ -28,14 +28,14 @@ La carte **Facturation / Comptabilité** affiche plusieurs informations :
       A : Etat par défaut - Aucun défaut de paiement,
     </p>
   - <p style={{ margin: 0, paddindLeft: "8px", backgroundColor: "#FFE066" }}>
-      B : Avertissement - Client ayant déjà eu des retards de paiment,
+      B : Avertissement - Client ayant déjà eu des retards de paiement,
     </p>
   - <p style={{ margin: 0, paddindLeft: "8px", backgroundColor: "#FFA8A8" }}>
       C : Alerte - Client qualifié de "Mauvais payeur"
     </p>
-- La facturation de l'année n-1 pour le client séléctionné,
+- La facturation de l'année n-1 pour le client sélectionné,
 - La facturation moyenne par dossier pour l'année n-1,
-- La facturation de l'année l'année en cours pour le client séléctionné,
+- La facturation de l'année l'année en cours pour le client sélectionné,
 - La facturation moyenne par dossier pour l'année en cours,
 
 :::info
@@ -55,9 +55,9 @@ La facturation de l'année passée et de l'année en cours sera récupérée dep
 
 <CustomCard img={"/img/commercial/customer_payment_edit.png"} />
 
-Dans ce mode vous pouvez modifier :
+Dans ce mode, vous pouvez modifier les informations suivantes :
 
-- Le délai de paiement enregistrés pour le client :
+- Le délai de paiement enregistré pour le client :
   - 30 jours (fin de mois),
   - 30 jours (net),
   - 45 jours
@@ -71,7 +71,7 @@ Dans ce mode vous pouvez modifier :
       A : Etat par défaut - Aucun défaut de paiement,
     </p>
   - <p style={{ margin: 0, paddindLeft: "8px", backgroundColor: "#FFE066" }}>
-      B : Avertissement - Client ayant déjà eu des retards de paiment,
+      B : Avertissement - Client ayant déjà eu des retards de paiement,
     </p>
   - <p style={{ margin: 0, paddindLeft: "8px", backgroundColor: "#FFA8A8" }}>
       C : Alerte - Client qualifié de "Mauvais payeur"
