--- a/docs/docs/commercial/client/relation-commerciale.mdx
+++ b/docs/docs/commercial/client/relation-commerciale.mdx
@@ -13,13 +13,13 @@ import CustomItem from "../../../src/components/utils/CustomItem.tsx";
 
 ### Mode lecture
 
-La carte **Relation commercial** affiche plusieurs informations :
+La carte **Relation commerciale** affiche plusieurs informations :
 
 - Le / Les commerciaux référent(s),
 - Date et objet de la dernière visite / réunion,
-- Objectif de production pour l'année n-1 avec le client séléctionné,
-- Production de l'année n-1 avec le client séléctionné,
-- Objectif de production pour l'année cours avec le client séléctionné,
+- Objectif de production pour l'année n-1 avec le client sélectionné,
+- Production de l'année n-1 avec le client sélectionné,
+- Objectif de production pour l'année cours avec le client sélectionné,
 - La mise en place d'un contrat cadre si visible,
 - Grille tarifaire au format PDF
 
@@ -40,12 +40,12 @@ La production de l'année passée et de l'année en cours sera récupérée depu
 
 <CustomCard img={"/img/commercial/customer_relationship_edit.png"} />
 
-Dans ce mode vous pouvez modifier :
+Dans ce mode, vous pouvez modifier les informations suivantes :
 
 - Le / Les commerciaux référent(s),
-- L'objectif de production pour l'année n-1 avec le client séléctionné,
-- L'objectif de production pour l'année an cours avec le client séléctionné,
-- La mise en place d'un contrat cadre,
+- L'objectif de production pour l'année n-1 avec le client sélectionné,
+- L'objectif de production pour l'année an cours avec le client sélectionné,
+- La mise en place d'un contrat-cadre,
 - Le ficher "Grille tarifaire" **au format PDF**
 
 :::info
@@ -64,7 +64,7 @@ Dans ce mode vous pouvez modifier :
   }
 />
 
-Une saisie manuel est toujours possible.
+Une saisie manuelle est toujours possible.
 
 :::
 
