--- a/docs/docs/commercial/client/visites-reunion.mdx
+++ b/docs/docs/commercial/client/visites-reunion.mdx
@@ -16,7 +16,7 @@ import CustomItem from "../../../src/components/utils/CustomItem.tsx";
 
 <CustomCard img={"/img/commercial/customer_appointment_preview.png"} />
 
-Cette partie liste l'ensemble des **Comptes-rendus de visite / réunion** enregistrés pour un client. Une fiche **"Rendez-vous (RDV)"** affiche plusieurs Informations :
+Cette partie liste l'ensemble des **Comptes-rendus de visite / réunion** enregistré pour un client. Une fiche **"Rendez-vous (RDV)"** affiche plusieurs Informations :
 
 - Le type de rendez-vous :
   - RDV de démarchage,
@@ -25,11 +25,11 @@ Cette partie liste l'ensemble des **Comptes-rendus de visite / réunion** enregi
   - Autre
 - L'adresse où s'est déroulé le rendez-vous,
 - Le / Les interlocuteur(s) présent(s) aux rendez-vous,
-- Le compte-rendus de visite / réunion
+- Le compte-rendu de visite / réunion
 
 :::tip
 
-- Un clic sur l'adresse du rendez-vous ouvre Google Maps dans un nouvelle onglet,
+- Un clic sur l'adresse du rendez-vous ouvre Google Maps dans un nouvel onglet,
 - Un survol sur un bouton **"Interlocuteur"** permet d'afficher des informations rapides sur celui-ci,
 - Un clic sur un interlocuteur ouvre sa fenêtre contextuelle **[(Voir la partie "Interlocuteurs" pour plus d'informations)](/docs/commercial/client/contact#interlocuteurs)**
 
@@ -46,20 +46,20 @@ Cette partie liste l'ensemble des **Comptes-rendus de visite / réunion** enregi
 
 <CustomCard img={"/img/commercial/customer_appointment_edit.png"} />
 
-Dans ce mode vous pouvez modifier :
+Dans ce mode, vous pouvez modifier les informations suivantes :
 
 - Le type de rendez-vous :
   - RDV de démarchage,
   - RDV de courtoisie,
   - RDV technique,
   - Autre
-- L'adresse où c'est déroulé le rendez-vous,
+- L'adresse où s'est déroulé le rendez-vous,
 - Le / Les interlocuteur(s) présent(s) aux rendez-vous,
-- Le compte-rendus de visite / réunion
+- Le compte-rendu de visite / réunion
 
 :::caution
 
-Un commercial doit être assigné comme **"Commercial référent"** pour pouvoir éditer la un rendez-vous et rédiger un compte-rendus de rendez-vous.
+Un commercial doit être assigné comme **"Commercial référent"** pour pouvoir éditer la un rendez-vous et rédiger un compte-rendu de rendez-vous.
 
 :::
 
@@ -79,7 +79,7 @@ L'éditeur de texte vous permet de rédiger un compte-rendus de rendez-vous. Les
   img={"/img/commercial/textEditor/customer_appointment_topMenu_fontColor.png"}
 />
 
-Cette outil vous permet de changer la couleur d'un texte préalablement selectionné. **14 couleurs sont prédéfinis.**
+Cet outil vous permet de changer la couleur d'un texte préalablement selectionné. **14 couleurs sont prédéfinies.**
 
 :::info
 
@@ -94,7 +94,7 @@ Cette outil vous permet de changer la couleur d'un texte préalablement selectio
   img={"/img/commercial/textEditor/customer_appointment_topMenu_fontStyle.png"}
 />
 
-Cette outil vous permet de changer le style d'un texte préalablement selectionné. Vous pouvez :
+Cet outil vous permet de changer le style d'un texte préalablement selectionné. Vous pouvez :
 
 - **mettre un texte en gras,**
 - _mettre un texte en italique,_
@@ -111,7 +111,7 @@ Cette outil vous permet de changer le style d'un texte préalablement selectionn
   img={"/img/commercial/textEditor/customer_appointment_topMenu_fontSize.png"}
 />
 
-Cette outil vous permet de changer la taille d'un texte préalablement selectionné et de le transformer en titre. **4 mises en forme sont prédéfinis,** si aucun n'est selectionné vous rédigez alors un paragraphe.
+Cet outil vous permet de changer la taille d'un texte préalablement selectionné et de le transformer en titre. **4 mises en forme sont prédéfinis,** si aucun n'est selectionné vous rédigez alors un paragraphe.
 
 <CustomCard
   img={"/img/commercial/textEditor/customer_appointment_LoremIpsum.png"}
@@ -122,10 +122,10 @@ Cette outil vous permet de changer la taille d'un texte préalablement selection
 <CustomCard
   img={"/img/commercial/textEditor/customer_appointment_topMenu_tools.png"}
 />
-Cette outil vous permet, pour un texte préalablement selectionné de :
+Cet outil vous permet, pour un texte préalablement selectionné de :
 
 - Créer une citation,
-- Ajouter une séparateur
+- Ajouter un séparateur
 - Créer une liste non-ordonnée,
 - Créer une liste ordonnée,
 - Mettre le texte en exposant,
@@ -137,7 +137,7 @@ Cette outil vous permet, pour un texte préalablement selectionné de :
   img={"/img/commercial/textEditor/customer_appointment_topMenu_link.png"}
 />
 
-Cette outil vous permet d'ajouter un **lien hypertexte vers un site internet** ou bien de le supprimer.
+Cet outil vous permet d'ajouter un **lien hypertexte vers un site internet** ou bien de le supprimer.
 
 #### Alignement de texte
 
@@ -145,7 +145,7 @@ Cette outil vous permet d'ajouter un **lien hypertexte vers un site internet** o
   img={"/img/commercial/textEditor/customer_appointment_topMenu_textAlign.png"}
 />
 
-Cette outil vous permet de changer **l'alignement** d'un texte préalablement selectionné. Vous pouvez :
+Cet outil vous permet de changer **l'alignement** d'un texte préalablement selectionné. Vous pouvez :
 
 - Aligner à gauche,
 - Centrer,
@@ -158,12 +158,12 @@ Cette outil vous permet de changer **l'alignement** d'un texte préalablement se
   img={"/img/commercial/textEditor/customer_appointment_topMenu_shortcut.png"}
 />
 
-Cette outil vous permet d'acceder à des **raccourcis en lien avec le client** selectionné. Vous pouvez :
+Cet outil vous permet d'accéder à des **raccourcis en lien avec le client** selectionné. Vous pouvez :
 
 - Ajouter le nom du client,
 - Ajouter l'adresse postale du client,
 - Ajouter l'adresse mail de contact du client,
-- Ajouter le numéro de téléphone principale du client,
+- Ajouter le numéro de téléphone principal du client,
 - Noter un rendez-vous en fonction d'un nombre d'étoile ⭐⭐⭐
 
 ### Edition rapide
