--- a/docs/docs/commercial/commercial.mdx
+++ b/docs/docs/commercial/commercial.mdx
@@ -7,7 +7,13 @@ import DocCardList from "@theme/DocCardList";
 
 # Commercial
 
-Fonctionnalité du module **"Commercial"**
+Le module **Commercial** fait partie des modules disponibles dans l'application. Il offre des fonctionnalités spécifiques pour les utilisateurs chargés de la gestion commerciale. Ce module permet notamment de gérer les fiches clients, de créer de nouveaux clients, de suivre l'historique des échanges commerciaux et de planifier des rendez-vous avec les clients.
+
+La navigation dans le module Commercial est simple et intuitive. Les utilisateurs peuvent facilement accéder aux différentes fonctionnalités en utilisant **des onglets** pour la **version ordinateur** ou **des menus déroulant** en **mode mobile**. Les fiches clients sont présentées de manière claire et structurée, avec toutes les informations importantes visibles en un coup d'œil.
+
+Dans le module **Commercial**, les utilisateurs peuvent également créer de nouveaux clients et saisir toutes les informations nécessaires dans une fiche client. Cette fonctionnalité permet de centraliser toutes les informations clients et de faciliter la gestion des échanges commerciaux.
+
+Enfin, le module Commercial propose également des outils pour **planifier et rédiger des comptes-rendus** de rendez-vous avec les clients et suivre l'historique des échanges commerciaux. Ces fonctionnalités permettent aux utilisateurs de suivre efficacement le processus de vente et de maintenir un contact régulier avec les clients.
 
 <CustomCard img={"/img/commercial/commercial.png"} />
 
