--- a/docs/docs/commercial/navigation.mdx
+++ b/docs/docs/commercial/navigation.mdx
@@ -6,7 +6,7 @@ import CustomCard from "../../src/components/utils/CustomCard.tsx";
 
 # Navigation
 
-Un système de navigation par onglet a été mis en place afin de filtrer le carnet d'adresse.
+Le module **"Commercial"** est équipé d'un système de navigation par onglet permettant de filtrer le carnet d'adresses selon différents critères :
 
 ## Commerciaux
 
@@ -21,7 +21,7 @@ Cette partie permet :
 
 <CustomCard img={"/img/commercial/category_menu.png"} />
 
-Chaque client est classé dans **une seule catégorie** :
+Chaque client est classé dans **une seule catégorie** parmis les suivantes :
 
 - Constructeur,
 - Négoce,
@@ -31,7 +31,7 @@ Chaque client est classé dans **une seule catégorie** :
 - Promoteur,
 - Charpentier,
 - Serrurerie,
-- Autre → Correspondant aux clients n'étant pas catalogués dans les catégories précédentes.
+- Autre (Correspondant aux clients n'étant pas catalogués dans les catégories précédentes)
 
 ## Clients / Groupes
 
@@ -46,7 +46,7 @@ Une fois une catégorie de client sélectionnée, une liste regroupant les clien
 
 <CustomCard img={"/img/commercial/customer.png"} />
 
-La dernière étape est l'affichage d'une **fiche client** regroupant :
+En fin de parcours, **la fiche client** est affichée, regroupant
 
 - Les coordonnées d'un client (adresse postale, numéro de téléphone, ...),
 - Les interlocuteurs,
