--- a/docs/docs/commercial/nouveau-client.mdx
+++ b/docs/docs/commercial/nouveau-client.mdx
@@ -7,10 +7,11 @@ import CustomItem from "../../src/components/utils/CustomItem.tsx";
 
 # Nouveau client
 
+N'importe quelle commercial peut créer une nouvelle fiche client dans la base de donnée.
+
 <CustomItem
   logoType={"circle-plus"}
-  content={`N'importe quelle commercial peut créer une nouvelle fiche client dans la
-    base de donnée. Pour cela il suffit de cliquer sur le <b>le "+"</b> ou le
+  content={`Pour cela il suffit de cliquer sur le <b>le "+"</b> ou le
     bouton <b>"Nouvelle fiche client"</b> à droite des filtres "Commerciaux".`}
 />
 
@@ -21,10 +22,10 @@ Un clic sur le bouton déclenche l'ouverture d'une fenêtre contextuelle :
 Dans ce mode, vous pouvez saisir :
 
 - Le commercial référent du nouveau client <span style={{color:"red", fontWeight:"bold"}}> \*</span>,
-- La catégorie associé au nouveau client <span style={{color:"red", fontWeight:"bold"}}> \*</span>,
+- La catégorie associée au nouveau client <span style={{color:"red", fontWeight:"bold"}}> \*</span>,
 - Le rattachement à un groupe existant ou bien à un nouveau,
 - La dénomination du nouveau client <span style={{color:"red", fontWeight:"bold"}}> \*</span>,
-- L'adresse postal du nouveau client <span style={{color:"red", fontWeight:"bold"}}> \*</span>,
+- L'adresse postale du nouveau client <span style={{color:"red", fontWeight:"bold"}}> \*</span>,
 - L'email principal de contact du nouvea client,
 - Le numéro de téléphone principal du nouveau client,
 
@@ -45,7 +46,7 @@ Vous pouvez également :
 
 :::tip
 
-La liste des groupements de client est automatiquement mise à jour en fonction de la catégorie de client selectionné précédement.
+La liste des groupements de client est automatiquement mise à jour en fonction de la catégorie de client sélectionné précédemment.
 
 :::
 :::caution
@@ -53,8 +54,8 @@ La liste des groupements de client est automatiquement mise à jour en fonction 
 **4 champs** de saisie sont obligatoires <span style={{color:"red", fontWeight:"bold"}}>(\*)</span> pour valider la création :
 
 - Le commercial référent du nouveau client <span style={{color:"red", fontWeight:"bold"}}> \*</span>,
-- La catégorie associé au nouveau client <span style={{color:"red", fontWeight:"bold"}}> \*</span>,
+- La catégorie associée au nouveau client <span style={{color:"red", fontWeight:"bold"}}> \*</span>,
 - La dénomination du nouveau client <span style={{color:"red", fontWeight:"bold"}}> \*</span>,
-- L'adresse postal du nouveau client <span style={{color:"red", fontWeight:"bold"}}> \*</span>,
+- L'adresse postale du nouveau client <span style={{color:"red", fontWeight:"bold"}}> \*</span>,
 
 :::
