--- a/docs/docs/en-tête/authentification.mdx
+++ b/docs/docs/en-tête/authentification.mdx
@@ -32,9 +32,9 @@ Si vous ne disposez pas encore de vos informations de connexion, vous pouvez cli
 
 ## Informations utilisateur
 
-Une fois connecté les informations suivante de l'utilisateur sont affichées :
+Une fois connecté à l'application, les informations suivantes de l'utilisateur sont affichées :
 
-- Rôle principal :
+- Vos rôles principaux au sein de l'entreprise :
   - <CustomItem
       logoType={"pencil"}
       content={"Dessinateur"}
@@ -57,12 +57,13 @@ Une fois connecté les informations suivante de l'utilisateur sont affichées :
     />
 - Nom,
 - Prénom,
-- Rôle attribués,
 - Agence de rattachement :
   - Clisson,
   - Anglet,
   - Villefranche-sur-Saône,
   - Global
+
+Ces informations vous permettront de mieux comprendre votre rôle et de vous organiser en fonction de votre équipe et de votre rattachement géographique.
 
 ## Déconnexion
 
@@ -70,6 +71,7 @@ Une fois connecté les informations suivante de l'utilisateur sont affichées :
 
 <CustomItem
   logoType={"logout"}
-  content={`Un clic que le bouton <b>"Se Déconnecter"</b> sous les informations
-    utilisateur permet de se déconnecter et de changer d'utilisateur.`}
+  content={`En bas des informations utilisateur, vous trouverez le bouton <b>"Se déconnecter"</b>. Cliquez sur ce bouton pour vous déconnecter de votre compte et retourner à l'écran de connexion. `}
 />
+
+Cette fonctionnalité est particulièrement utile **si vous partagez votre ordinateur** avec d'autres utilisateurs et que vous souhaitez protéger **la confidentialité de vos données**. En vous déconnectant, vous pouvez également permettre à un autre utilisateur de se connecter à son propre compte et d'accéder à l'Intranet avec ses propres paramètres.
