--- a/docs/docs/planning/planning.mdx
+++ b/docs/docs/planning/planning.mdx
@@ -2,14 +2,12 @@
 sidebar_position: 4
 ---
 
-import DocCardList from "@theme/DocCardList";
-
 # Planning
-
-Fonctionnalité du module **"Planning"**
 
 **🚧 En cours de construction**
 
-![alt text]("/../../../static/img/illustration/Bricklayer-bro.svg)
+Le module **"Planning"** est un outil de gestion de projet en cours de développement, qui permet de planifier et de suivre l'avancement des tâches et dossiers dans l'application. Grâce à ce module, les utilisateurs peuvent facilement affecter des membres de l'équipe en fonction de leurs compétences et de leur disponibilité, suivre l'état d'avancement de chaque dossier et identifier les éventuels problèmes dans le processus de production.
 
-<DocCardList />
+En utilisant ce module, les utilisateurs pourront planifier efficacement les tâches quotidiennes, optimiser les ressources disponibles et répondre aux échéances de production. Le module **"Planning"** sera un outil essentiel pour les entreprises souhaitant améliorer leur productivité et leur efficacité dans la gestion de projets.
+
+![alt text]("/../../../static/img/illustration/Bricklayer-bro.svg)
