--- a/docs/docs/commercial/presentation.mdx
+++ b/docs/docs/commercial/presentation.mdx
@@ -6,7 +6,7 @@ import CustomCard from "../../src/components/utils/CustomCard.tsx";
 
 # Présentation du module
 
-Le module **"Commercial"** se compose de deux parties principales :
+Le module **"Commercial"** est dédié à la gestion des clients et des dossiers commerciaux. Il se compose de deux parties principales :
 
 <CustomCard img={"/img/commercial/app.png"} />
 
@@ -14,19 +14,19 @@ Le module **"Commercial"** se compose de deux parties principales :
 
 <CustomCard img={"/img/header/header.png"} />
 
-Cette zone permet de naviguer entre les modules et de réaliser une recherche dans la base de données.
+Cette zone permet de naviguer entre les différents modules de l'application et de réaliser une recherche rapide dans la base de données commerciales.
 
 Pour plus d'informations :
 
-- [Authentification](/docs/en-tête/authentification)
-- [Navigation entre les modules](/docs/en-tête/navigation)
-- [Moteur de recherche](/docs/en-tête/searchBar)
+- [L'Authentification](/docs/en-tête/authentification) pour vous connecter à l'application,
+- [La Navigation](/docs/en-tête/navigation) entre les différents modules proposés,
+- [Le Moteur de recherche](/docs/en-tête/searchBar) pour trouver rapidement des informations dans la base de données.
 
 ## Application
 
 <CustomCard img={"/img/commercial/commercial.png"} />
 
-C'est le corps du module **"Commercial"**. C'est ici que vous retrouvez **les menus de filtrage** menant vers les clients enregistrés dans l'application avec nottamment :
+C'est le corps du module **"Commercial"**. C'est ici que vous retrouvez les menus de filtrage menant vers les clients enregistrés dans l'application. Vous pouvez ainsi accéder aux informations suivantes :
 
 - Les coordonnées d'un client (adresse postale, numéro de téléphone, ...),
 - Les interlocuteurs,
@@ -34,3 +34,5 @@ C'est le corps du module **"Commercial"**. C'est ici que vous retrouvez **les me
 - Le nombre de dossiers produits et la facturation,
 - Les comptes-rendus de visite,
 - ...
+
+Le module **"Commercial"** vous permet également de créer de nouveaux clients, de gérer les dossiers commerciaux et de suivre l'évolution des ventes. Nous vous présentons en détail toutes les fonctionnalités du module **"Commercial"** dans les sections suivantes.
