--- a/docs/docs/en-tête/modules.mdx
+++ b/docs/docs/en-tête/modules.mdx
@@ -9,7 +9,7 @@ import CustomItem from "../../src/components/utils/CustomItem.tsx";
 
 <CustomCard img={"/img/header/logout.png"} />
 
-**6 modules** sont actuellement proposés :
+La partie **"Sélection de module"** vous permet de naviguer facilement dans l'application et d'accéder aux différentes fonctionnalités proposées. Actuellement, ** 6 modules** sont disponibles :
 
 - <a style={{ fontWeight: "bold" }} href="/docs/planning">
     <CustomItem
@@ -42,8 +42,10 @@ import CustomItem from "../../src/components/utils/CustomItem.tsx";
     />
   </a>
 
+En cliquant sur le module de votre choix, vous serez redirigé vers la page correspondante et pourrez ainsi accéder aux différentes fonctionnalités proposées.
+
 :::tip
 
-Un clic sur **"Boîte à idées"** permet d'être redirigé vers le canal de discussion **[MS Teams](https://teams.microsoft.com/l/entity/com.microsoft.teamspace.tab.planner/_djb2_msteams_prefix_2648630200?context=%7B%22subEntityId%22%3Anull%2C%22channelId%22%3A%2219%3A0f8f47058ee7406cb4b4e8832b99bbd5%40thread.tacv2%22%7D&groupId=dca97689-01ae-48ab-b7bf-6b92ebb99d05&tenantId=7d0e14de-436b-42c4-a7a6-64b38179ae2f&allowXTenantAccess=false)**.
+Il est à noter qu'un clic sur le bouton **"Boîte à idées"** vous permettra d'être redirigé vers le canal de discussion **[MS Teams](https://teams.microsoft.com/l/entity/com.microsoft.teamspace.tab.planner/_djb2_msteams_prefix_2648630200?context=%7B%22subEntityId%22%3Anull%2C%22channelId%22%3A%2219%3A0f8f47058ee7406cb4b4e8832b99bbd5%40thread.tacv2%22%7D&groupId=dca97689-01ae-48ab-b7bf-6b92ebb99d05&tenantId=7d0e14de-436b-42c4-a7a6-64b38179ae2f&allowXTenantAccess=false)** dédié à notre application. Ce canal vous permettra de soumettre vos idées et suggestions d'amélioration pour l'application et de participer activement à son développement.
 
 :::
