--- a/docs/docs/introduction.mdx
+++ b/docs/docs/introduction.mdx
@@ -24,7 +24,7 @@ Enfin, le module **["Planning"](/docs/planning)** est également un outil de pla
 Le module **["Commercial"](/docs/commercial)** de l'application web **Intranet - 123 Structure** est spécialement conçu pour répondre aux besoins des commerciaux et des responsables de relations clients. Grâce à ce module, nous pouvons organiser efficacement toutes les informations de contact et de relation avec nos clients. Nous pouvons facilement rechercher une fiche client souhaitée en utilisant plusieurs filtres tels que le nom, le secteur d'activité ou encore le / les commerciaux référents. Une fois la fiche client retrouvée, vous pouvez consulter toutes les informations de contact telles que les adresses mails et postales, les numéros de téléphone, ...
 
 Mais ce n'est pas tout, avec le module **["Commercial"](/docs/commercial)**, vous pouvez également consulter les données de la relation commerciale avec chaque client. Vous pouvez suivre les historiques de commandes, les devis, les factures, les paiements, les échéances, ... De plus, vous pouvez obtenir des indicateurs clés tels que le chiffre d'affaires généré par chaque client, le nombre de commandes passées, le nombre de factures émises pour l'année en cours et l'année passée. Ces informations vous permettent de mieux comprendre la situation commerciale de chaque client et de prendre des décisions éclairées.
-Enfin, le module **["Commercial"](/docs/commercial)** nous permet également de gérer les comptes rendus de visite. Vous pouvez enregistrer les comptes rendus de chaque visite client et les associer à la fiche client correspondante. Cela vous permet de suivre l'évolution de la relation commerciale avec chaque client et d’assurer que toutes les actions prévues sont effectuées.
+Enfin, le module **["Commercial"](/docs/commercial)** nous permet également de gérer les comptes-rendus de visite. Vous pouvez enregistrer les comptes rendus de chaque visite client et les associer à la fiche client correspondante. Cela vous permet de suivre l'évolution de la relation commerciale avec chaque client et d’assurer que toutes les actions prévues sont effectuées.
 
 En somme, le module **["Commercial"](/docs/commercial)** de l'application web **Intranet - 123 Structure** vous offre une vue d'ensemble complète de toutes vos relations commerciales avec vos clients. Il nous permet de mieux organiser vos données de contact, de suivre les historiques de commande, les factures et les paiements, de consulter des indicateurs clés et de gérer les comptes-rendus de visite.
 
